[gd_scene load_steps=18 format=3 uid="uid://ba0uodgcmckqe"]

[ext_resource type="Script" path="res://DNF/Script/SwordManRootNode_Foot.gd" id="1_sq72d"]
[ext_resource type="Texture2D" uid="uid://bymer10hqpqfg" path="res://DNF/Source/Sprite2D/img_location.png" id="2_u1xd4"]
[ext_resource type="Script" path="res://DNF/Script/Player/Area2D_PlayerFoot.gd" id="3_3t6o4"]
[ext_resource type="Script" path="res://DNF/Script/Player/area2D_player_body.gd" id="4_2a4s3"]
[ext_resource type="SpriteFrames" uid="uid://uym2uf6cifqr" path="res://DNF/Source/Animation/Human/Mage/Character/Atlas/dnf_mage_char_type01.tres" id="5_r5bcs"]
[ext_resource type="SpriteFrames" uid="uid://bsernd4nxpouy" path="res://DNF/Source/Animation/Human/Mage/Weapon/Atlas/dnf_mage_weaon_staff_purple.tres" id="6_lgp1g"]
[ext_resource type="Script" path="res://DNF/Script/Player/StateMachine.gd" id="6_oa5it"]
[ext_resource type="Script" path="res://DNF/Script/Player/SwordManIdle.gd" id="7_d7go1"]
[ext_resource type="Script" path="res://DNF/Script/Player/SwordManRun.gd" id="8_tw5k7"]
[ext_resource type="Script" path="res://DNF/Script/Player/swordman_jump.gd" id="9_gksp8"]
[ext_resource type="Script" path="res://DNF/Script/Player/SwordMan_Attack01_On_Floor.gd" id="10_h4unp"]
[ext_resource type="Script" path="res://DNF/Script/Player/SwordMan_Attack02_On_Floor.gd" id="11_o124y"]
[ext_resource type="Script" path="res://DNF/Script/Player/SwordMan_Attack03_On_Floor.gd" id="12_yng62"]
[ext_resource type="Script" path="res://DNF/Script/Player/swordman_hurt.gd" id="13_hekjc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfd3d"]
size = Vector2(20, 5.50562)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1to7y"]
size = Vector2(20, 5.5955)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_up6v2"]
size = Vector2(11.3333, 29.7753)

[node name="CharacterBody2D_Root" type="CharacterBody2D"]
scale = Vector2(3, 3.56)
script = ExtResource("1_sq72d")

[node name="CollisionShape2D_Foot" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_yfd3d")

[node name="Location_Foot" type="Sprite2D" parent="CollisionShape2D_Foot"]
self_modulate = Color(0, 0.807843, 0.85098, 0.490196)
scale = Vector2(0.039, 0.01)
texture = ExtResource("2_u1xd4")

[node name="Area2D_PlayerFoot" type="Area2D" parent="."]
collision_layer = 257
collision_mask = 16
script = ExtResource("3_3t6o4")

[node name="Collision_1st" type="CollisionShape2D" parent="Area2D_PlayerFoot"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_1to7y")

[node name="Area2D_PlayerBody" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32
script = ExtResource("4_2a4s3")

[node name="Collision_2nd" type="CollisionShape2D" parent="Area2D_PlayerBody"]
position = Vector2(0, 2.80899)
scale = Vector2(0.999999, 1)
shape = SubResource("RectangleShape2D_up6v2")

[node name="AnimatedSprite2D_Body" type="AnimatedSprite2D" parent="Area2D_PlayerBody"]
position = Vector2(-30, 3.93258)
scale = Vector2(0.3, 0.3)
sprite_frames = ExtResource("5_r5bcs")
animation = &"idle_10_13"
frame_progress = 0.702492
offset = Vector2(100, 0)

[node name="AnimatedSprite2D_Weapon" type="AnimatedSprite2D" parent="Area2D_PlayerBody/AnimatedSprite2D_Body"]
position = Vector2(-2, -10)
scale = Vector2(0.666667, 0.666667)
sprite_frames = ExtResource("6_lgp1g")
animation = &"idle_10_13"
autoplay = "idle_10_13"
frame = 2
frame_progress = 0.535246
offset = Vector2(100, 0)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_oa5it")
default_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_d7go1")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("8_tw5k7")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("9_gksp8")

[node name="Attack01_On_Floor" type="Node" parent="StateMachine"]
script = ExtResource("10_h4unp")

[node name="Attack02_On_Floor" type="Node" parent="StateMachine"]
script = ExtResource("11_o124y")

[node name="Attack03_On_Floor" type="Node" parent="StateMachine"]
script = ExtResource("12_yng62")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("13_hekjc")

[connection signal="area_entered" from="Area2D_PlayerFoot" to="Area2D_PlayerFoot" method="_on_area_entered"]
[connection signal="be_hit" from="Area2D_PlayerBody" to="." method="_on_area_2d_player_body_be_hit"]
